refactor: (#323) Member 엔티티 필드 수정으로 인한 컴파일 에러 처리